--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,5 +12,5 @@ spring:
 mybatis:
   configuration:
     map-underscore-to-camel-case: true
-  type-aliases-package: life.majiang.community.deo
+  type-aliases-package: life.majiang.community.mapper
   mapper-locations: classpath:resources/mapper/*.xml
