--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -26,6 +26,7 @@ mybatis:
   type-aliases-package: life.majiang.community.mapper
   mapper-locations: classpath:resources/mapper/*.xml
 
+#数据库mysql5.7
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -33,3 +34,20 @@ spring:
     username: root
     password: 123456
     type: com.alibaba.druid.pool.DruidDataSource
+
+#redis的springboot配置
+  jpa:
+    show-sql: true # 启动日志sql语句
+  redis:
+    database: 0 # 数据库索引默认0
+    host: 121.40.218.249  # 连接ip
+    port: 6379 # 连接端口
+    password: root # 连接密码
+# springboot 2.0 redis默认客户端已换成lettuce
+    lettuce:
+      pool:
+        max-active: 8 # 连接池最大连接数（使用负值表示没有限制） 默认 8
+        max-wait: -1  # 连接池最大阻塞等待时间（使用负值表示没有限制） 默认 -1
+        max-idle: 8   # 连接池中的最大空闲连接 默认 8
+        min-idle: 0   # 连接池中的最小空闲连接 默认 0
+    timeout: 5000     # 最大超时时间
