登录切换bug修复 邮箱验证登录接口编写

--- a/pom.xml
+++ b/pom.xml
@@ -113,11 +113,7 @@
             <version>1.2.75</version>
         </dependency>
 
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>1.2.75</version>
-        </dependency>
+
         <!--手机验证码登录的包-->
         <dependency>
             <groupId>com.zhenzikj</groupId>
@@ -137,7 +133,25 @@
             <version>3.6.0</version>
         </dependency>
 
+<!--        thymeleaf有点问题-->
+<!--        <dependency>-->
+<!--            <groupId>org.thymeleaf</groupId>-->
+<!--            <artifactId>thymeleaf-spring5</artifactId>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.thymeleaf.extras</groupId>-->
+<!--            <artifactId>thymeleaf-extras-java8time</artifactId>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.thymeleaf</groupId>-->
+<!--            <artifactId>thymeleaf</artifactId>-->
+<!--        </dependency>-->
 
+            <!--qq邮箱登录-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
     </dependencies>
 
 
