文件的上传，文章，回复类

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ server.port=8888
 
 spring.thymeleaf.cache=false
 spring.mvc.hiddenmethod.filter.enabled=true
+
+lpf-comment.upload_path=/opt/upload/
+lpf-comment.pro_upload_path=/home/ggj/soft/upload/
+lpf-comment.dev_upload_path=D:/upload/
