--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>life.majiang</groupId>
     <artifactId>community</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.2-SNAPSHOT</version>
     <name>community</name>
     <description>community</description>
     <properties>
@@ -102,6 +102,7 @@
 <!--            <artifactId>spring-boot-devtools</artifactId>-->
 <!--            <optional>true</optional>-->
 <!--        </dependency>-->
+<!--        阿里巴巴druid数据库连接池-->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid-spring-boot-starter</artifactId>
@@ -114,18 +115,18 @@
         </dependency>
 
 
-        <!--手机验证码登录的包-->
+        <!--手机验证码登录的包（榛子云）-->
         <dependency>
             <groupId>com.zhenzikj</groupId>
             <artifactId>zhenzisms</artifactId>
             <version>2.0.2</version>
         </dependency>
         <!--手机验证码登录的包：腾讯云的-->
-        <dependency>
-            <groupId>com.github.qcloudsms</groupId>
-            <artifactId>qcloudsms</artifactId>
-            <version>1.0.6</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.github.qcloudsms</groupId>-->
+<!--            <artifactId>qcloudsms</artifactId>-->
+<!--            <version>1.0.6</version>-->
+<!--        </dependency>-->
         <!-- https://mvnrepository.com/artifact/org.webjars.bower/jquery -->
         <dependency>
             <groupId>org.webjars.bower</groupId>
@@ -133,24 +134,18 @@
             <version>3.6.0</version>
         </dependency>
 
-<!--        thymeleaf有点问题-->
-<!--        <dependency>-->
-<!--            <groupId>org.thymeleaf</groupId>-->
-<!--            <artifactId>thymeleaf-spring5</artifactId>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.thymeleaf.extras</groupId>-->
-<!--            <artifactId>thymeleaf-extras-java8time</artifactId>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.thymeleaf</groupId>-->
-<!--            <artifactId>thymeleaf</artifactId>-->
-<!--        </dependency>-->
-
             <!--qq邮箱登录-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
+        <!--springboot分页插件-->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <!-- 特别注意版本问题, 看到评论以后得以纠正 -->
+            <version>1.2.3</version>
         </dependency>
     </dependencies>
 
