--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,14 +3,8 @@ server.port=8888
 spring.thymeleaf.cache=false
 spring.mvc.hiddenmethod.filter.enabled=true
 
-#lpf-comment.upload_path=/opt/upload/
-lpf-comment.upload_path=D:/upload/
-lpf-comment.pro_upload_path=/home/ggj/soft/upload/
-lpf-comment.dev_upload_path=D:/upload/
+#lpf-comment.upload_path=/o
+lpf-comment.upload_path=D:/u
+lpf-comment.pro_upload_path=/ho
+lpf-comment.dev_upload_path=D:/
 
-#SSL Key Info
-#security.require-ssl=true
-#server.ssl.key-store-password=lgzoUPso
-#server.ssl.key-store=/home/lpf/6386495_www.lpf-pqcm.top.pfx
-#server.ssl.key-store-type=PKCS12
-#E:\dasanxia\lpf_shequ\life\majiang\src\main\resources\ebininfosoft-ssl-key.p12
